@@ -1,5 +1,7 @@
 4.11.2 (Work-in-progress): small bug fixes.
 
+* New API functions: model/getEntitiesForPhysicalName.
+
 4.11.1 (December 21, 2022): Mesh.TransfiniteTri improvements; small bug fixes.
 
 4.11.0 (November 6, 2022): new Fortran API; improved copying ("Duplicata") of
